--- a/Test02/Views/KhachHang/GioHangDL.cshtml
+++ b/Test02/Views/KhachHang/GioHangDL.cshtml
@@ -61,6 +61,17 @@
             });
         </script>
     }
+
+    if (TempData["ErrorSL"] != null)
+    {
+        <script>
+            swal({
+                title: "Số lượng không hợp lệ",
+                icon: "warning",
+                button: "Thoát",
+            });
+        </script>
+    }
 }
 
 <div class="row">
@@ -76,7 +87,8 @@
                                 <th style="text-align: center">Tên sản phẩm</th>
                                 <th style="text-align: center">Hình ảnh</th>
                                 <th style="text-align: center">Giá</th>
-                                <th style="text-align: center;">Số lượng</th>
+                                <th style="text-align: center">Số lượng tồn</th>
+                                <th style="text-align: center;">Số lượng mua</th>
                                 <th style="text-align: center">Thành tiền</th>
                                 <th style="text-align: center">Chức năng</th>
                             </tr>
@@ -87,28 +99,26 @@
                                 //double total = item.idSP.Gia.Value * item.soLuong;
                                 <tr>
                                     <td style="text-align: center">@Html.DisplayFor(model => item.idSP.TenSP)</td>
-                                    <td style="width: 100px; height: 100px;"><img src="@item.idSP.HinhAnh" style="width: 100px; height: 100px;"></img></td>
+                                    <td style="width: 100px; height: 100px;"><img src="@item.idSP.HinhAnh" style="width: 100px; height: 100px;"></td>
                                     <td style="text-align: center">
                                         @{var gia = string.Format("{0:0,0 VNĐ}", item.idSP.Gia);}
                                         @Html.DisplayFor(model => gia)
                                     </td>
+                                    <td style="text-align: center">@Html.DisplayFor(model => item.idSP.TongTon)</td>
                                     <td style="width: 150px;">
-                                        @using (Html.BeginForm("CapNhatSL", "KhachHang"))
-                                        {
-                                            <input type="hidden" value="@item.idSP.MaSP" name="MaSP" />
-                                            <div style="display: flex;">
-                                                <input class="form-control" type="number" value="@item.soLuong" name="soluong" style="width: 150px;" />
-                                                <input class="btn btn-success" type="submit" value="Cập nhật" />
-                                            </div>
-                                        }
-                                        @*<div style="display: flex;">
-                                                <div id="sllon"></div>
-                                                <div id="slbe"></div>
-                                                <input class="form-control quantity" type="number" min="1" max="@item.idSP.TongTon" id="quantity-@item.idSP" name="quantity" value="@item.soLuong" style="width: 150px;" data-product-id="@item.idSP.MaSP" />
-                                            </div>*@
+                                        @*@using (Html.BeginForm("CapNhatSL", "KhachHang"))
+                                            {
+                                                <input type="hidden" value="@item.idSP.MaSP" name="MaSP" />
+                                                <div style="display: flex;">
+                                                    <input class="form-control" type="number" value="@item.soLuong" name="soluong" style="width: 150px;" />
+                                                    <input class="btn btn-success" type="submit" value="Cập nhật" />
+                                                </div>
+                                            }*@
+
+                                        <input class="form-control quantity" type="number" min="1" max="@item.idSP.TongTon" id="quantity-@item.idSP" name="quantity" value="@item.soLuong" style="width: 150px;" data-product-id="@item.idSP.MaSP" data-tong-ton="@item.idSP.TongTon" data-soluongafter="@item.soLuong" />
+
                                     </td>
                                     <td class="thanhtien" id="thanhtien-@item.idSP.MaSP" style="text-align: center">
-
                                         @{ var tien = string.Format("{0:0,0 VNĐ}", Model.ThanhTien(item.idSP.MaSP)); ;} @tien
                                     </td>
                                     <td style="text-align: center;">
@@ -119,12 +129,12 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <td colspan="6" id="tongtien" style="text-align: right;">
+                                <td colspan="7" id="tongtien" style="text-align: right;">
                                     Tổng Tiền: @{ var tong = string.Format("{0:0,0 VNĐ}", @Model.TongTien());} @tong
                                 </td>
                             </tr>
                             <tr>
-                                <td colspan="6" style="text-align: right; border: 0px;">
+                                <td colspan="7" style="text-align: right; border: 0px;">
                                     <a class="btn btn-primary" href="/KhachHang/PageDatHang">Đặt hàng</a>
                                 </td>
                             </tr>
@@ -140,19 +150,20 @@
                                 <th style="text-align: center">Tên sản phẩm</th>
                                 <th style="text-align: center">Hình ảnh</th>
                                 <th style="text-align: center">Giá</th>
-                                <th style="text-align: center">Số lượng</th>
+                                <th style="text-align: center">Số lượng tồn</th>
+                                <th style="text-align: center">Số lượng mua</th>
                                 <th style="text-align: center">Thành tiền</th>
                                 <th style="text-align: center">Chức năng</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td colspan="6" style="text-align: center;">Không có sản phẩm trong giỏ hàng</td>
+                                <td colspan="7" style="text-align: center;">Không có sản phẩm trong giỏ hàng</td>
                             </tr>
                         </tbody>
                         <tfoot>
                             <tr>
-                                <td colspan="6" style="text-align: right;">
+                                <td colspan="7" style="text-align: right;">
                                     Thành tiền: 00 VND
                                 </td>
                             </tr>
@@ -169,23 +180,44 @@
     </div>
 </div>
 
-@*<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>*@
-@*<script type="text/javascript">
-        $(document).ready(function () {
-            $('.quantity').change(function () {
-                var quantity = $(this).val();
-                var productId = $(this).data('product-id');
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('.quantity').change(function () {
+            var quantity = $(this).val();
+            var soluongton = $(this).data('tong-ton');
+            var productId = $(this).data('product-id');
+            var slafter = $(this).data('soluongafter');
+            $.ajax({
+                url: '/KhachHang/CapNhatSL',
+                type: 'POST',
+                data: { MaSP: productId, soluong: quantity },
+                success: function (result) {
+                    if (quantity <= 0) {
+                        location.reload();
+                        swal({
+                            title: "Số lượng sản phẩm phải lớn hơn 0",
+                            icon: "warning",
+                            button: "Thoát",
+                        });
+                    }
 
-                $.ajax({
-                    url: '/KhachHang/CapNhatSL',
-                    type: 'POST',
-                    data: { MaSP: productId, soluong: quantity },
-                    success: function (result) {
+                    if (quantity > soluongton) {
+                        /*location.reload();*/
+                        swal({
+                            title: "Số lượng cập nhật lớn hơn số lượng tồn!!!",
+                            icon: "warning",
+                            button: "Thoát",
+                        });
+                    }
+
+                    else {
                         $('#tongtien').text(result.tongTien);
                         $('#thanhtien-' + productId).text(result.thanhTien);
                     }
-                });
+                }
             });
         });
-    </script>*@
+    });
+</script>
