--- a/Test02/Views/KhachHang/GioHangDL.cshtml
+++ b/Test02/Views/KhachHang/GioHangDL.cshtml
@@ -195,7 +195,7 @@
                 data: { MaSP: productId, soluong: quantity },
                 success: function (result) {
                     if (quantity <= 0) {
-                        location.reload();
+/*                        location.reload();*/
                         swal({
                             title: "Số lượng sản phẩm phải lớn hơn 0",
                             icon: "warning",
