--- a/Test02/Views/KinhDoanh/DanhSachCTDH.cshtml
+++ b/Test02/Views/KinhDoanh/DanhSachCTDH.cshtml
@@ -252,6 +252,8 @@
     </div>
 </div>
 @section script{
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
         var i = 0;
     function themSP() {
@@ -271,7 +273,7 @@
                     '</div>' +
                 '<div class="form-group col-md-3">' +
                     '<label class="control-label">Số lượng:</label>' +
-                    '<input class="form-control" type="number" min=0 name="SoLuong' + i + '" id="SoLuong' + i +'" required />' +
+                    '<input style="height:30px" class="form-control" type="number" min=0 name="SoLuong' + i + '" id="SoLuong' + i +'" required />' +
                 '</div>' +
                 '<div class="form-group col-md-3">' +
                     '<p class="control-label" style="margin-top: 16px;" id="Total'+i+'">Thành tiền: 0 VNĐ </p>' +
@@ -282,6 +284,9 @@
             //div.innerHTML += row;
             $("#themdong").append(row);
             console.log(i);
+            $('#ChonSP' + i).select2({
+                dropdownParent: $('#myModal')
+            });
             $("#SoLuongSP").attr("value", i);
             //$("#btnadd").attr("action", "/KinhDoanh/ThemCTHD2/" + i);
             $("#CapNhatDh").prop("disabled", false);
